--- a/vertical_bars/barchart.css
+++ b/vertical_bars/barchart.css
@@ -3,7 +3,18 @@
 }
 
 .chart text {
-    fill: mediumspringgreen;
+    fill: black;
     font: 10px sans-serif;
     text-anchor: end;
 }
+
+.axis text {
+    font: 10px sans-serif;
+  }
+  
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+  }
